force-app/main/default/objects/Student__c/fields/Annual_Fees__c.field-meta.xml
<CustomField>
    <fullName>Annual_Fees__c</fullName>
    <formula>Total_Fees__c / Duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>