force-app/main/default/objects/Student__c/fields/Sr_No__c.field-meta.xml
<CustomField>
    <fullName>Sr_No__c</fullName>
    <label>Sr. No</label>
    <type>AutoNumber</type>
</CustomField>