force-app/main/default/objects/Student__c/fields/Transport_Availed__c.field-meta.xml
<CustomField>
    <fullName>Transport_Availed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transport Availed</label>
    <type>Checkbox</type>
</CustomField>