force-app/main/default/objects/Student__c/validationRules/Admission_Date_is_Greater_than_Graduatio.validationRule-meta.xml
<ValidationRule>
    <fullName>Admission_Date_is_Greater_than_Graduatio</fullName>
    <active>true</active>
    <errorConditionFormula>Admission_Date__c &gt;  Graduation_Date__c</errorConditionFormula>
    <errorMessage>The admission Date is greater than the Graduation Date</errorMessage>
</ValidationRule>