force-app/main/default/objects/Student__c/validationRules/Age_is_can_not_be_less_than_18_Gret_25.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_is_can_not_be_less_than_18_Gret_25</fullName>
    <active>true</active>
    <errorConditionFormula>Age__c &lt; 18  || Age__c &gt; 25</errorConditionFormula>
    <errorDisplayField>Age__c</errorDisplayField>
    <errorMessage>Age can not be less than 18 and Greate than 25</errorMessage>
</ValidationRule>