force-app/main/default/objects/Student__c/validationRules/Email_is_not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_is_not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Email__c)</errorConditionFormula>
    <errorDisplayField>Email__c</errorDisplayField>
    <errorMessage>Email Can not be Blank</errorMessage>
</ValidationRule>