force-app/main/default/objects/Student__c/validationRules/Validation_Rule_on_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_on_Email</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(CONTAINS(Email__c, &apos;abc&apos;))</errorConditionFormula>
    <errorMessage>Please add the ABC in the Email</errorMessage>
</ValidationRule>