force-app/main/default/objects/Student__c/validationRules/VR_on_Courses.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_on_Courses</fullName>
    <active>true</active>
    <errorConditionFormula>INCLUDES(Courses__c,&apos;Testing&apos;)</errorConditionFormula>
    <errorMessage>We can not Select the Cousres as Testing</errorMessage>
</ValidationRule>